crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__main_tier_rich_5.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: CHI
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: I
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: I
    - Word:
        category: ~
        body:
          - Text: crack
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: crack
  terminator:
    TrailingOff: +...
  postcodes: []
  media_bullet: ~
