crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__main_tier_rich_7.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: PAR
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: 也
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: 也
    - Word:
        category: ~
        body:
          - Text: 是
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: 是
    - Word:
        category: ~
        body:
          - Text: 厨房
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: 厨房
    - Word:
        category: ~
        body:
          - Text: 里面
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: 里面
    - Retrace:
        content:
          - Word:
              category: ~
              body:
                - Text: 这个
              form_marker: ~
              lang: ~
              pos_tag: ~
              annotations: []
              raw_text: 这个
        kind: Complete
        is_group: true
        annotations: []
    - Word:
        category: Nonword
        body:
          - Text: xi
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: "&~xi"
    - Retrace:
        content:
          - Word:
              category: ~
              body:
                - Text: 那
              form_marker: ~
              lang: ~
              pos_tag: ~
              annotations: []
              raw_text: 那
          - Word:
              category: ~
              body:
                - Text: 个
              form_marker: ~
              lang: ~
              pos_tag: ~
              annotations: []
              raw_text: 个
        kind: Partial
        is_group: true
        annotations: []
    - Word:
        category: ~
        body:
          - Text: 那
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: 那
    - Word:
        category: ~
        body:
          - Text: 个
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: 个
    - Word:
        category: ~
        body:
          - Text: 台子
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: 台子
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u0015428510_429651\u0015"
      start_time: "428510"
      end_time: "429651"
      skip: false
