crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__main_tier_rich_9.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: CHI
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: "no"
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations:
          - Paralinguistic: cries
        raw_text: "no"
  terminator:
    Period: "."
  postcodes:
    - Postcode: SR
  media_bullet:
    MediaBullet:
      raw_text: "\u0015171921_173802\u0015"
      start_time: "171921"
      end_time: "173802"
