crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__mor_1.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: tier
---
items:
  - main:
      pos: intj
      lemma: goedzo
      features: []
    post_clitics: []
terminator:
  Period: "."
